feat: adiciona serviços de scan automatizado e monitoramento de credenciais
- Scan Automatizado de Vulnerabilidades (Acunetix, HCL AppScan, Nessus Professional)
- Monitoramento de Credenciais Vazadas & Dark Web
- Dois novos cards no grid de serviços
- SEO atualizado com novas keywords

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="LyvioSec — Consultoria ofensiva em Pentest e Red Team com foco em impacto real, exploração reprodutível e plano de correção acionável.">
-    <meta name="keywords" content="pentest, red team, segurança ofensiva, consultoria, cybersecurity, OWASP, pentesting">
+    <meta name="keywords" content="pentest, red team, segurança ofensiva, consultoria, cybersecurity, OWASP, pentesting, acunetix, nessus, appscan, credenciais vazadas, dark web">
     <meta name="author" content="LyvioSec">
     
     <!-- Open Graph / Facebook -->
@@ -102,10 +102,10 @@
     </section>
 
     <!-- Services Section -->
-    <section id="servicos" class="services-section">
+    <section id="services-section">
         <div class="dark-content-container">
             <h2 class="section-title">Serviços Especializados</h2>
-            <p class="section-subtitle">Segurança ofensiva adaptada ao seu contexto</p>
+            <p class="section-subtitle">Segurança ofensiva e inteligência de ameaças adaptada ao seu contexto</p>
             
             <div class="services-grid">
                 <!-- Service 1 -->
@@ -165,6 +165,38 @@
                         <li>TTPs MITRE ATT&CK</li>
                         <li>Evasão de detecção</li>
                         <li>Purple team & resposta</li>
+                    </ul>
+                </div>
+
+                <!-- NOVO SERVIÇO 5 - Scan Automatizado -->
+                <div class="service-card">
+                    <div class="service-icon">
+                        <img src="./assets/images/service-scan.jpg" alt="Scan de Vulnerabilidades" loading="lazy">
+                    </div>
+                    <h3 class="service-title">Scan Automatizado de Vulnerabilidades</h3>
+                    <p class="service-description">Varredura massiva e contínua com as melhores ferramentas comerciais do mercado.</p>
+                    <ul class="service-list">
+                        <li>Acunetix (Web + API)</li>
+                        <li>HCL AppScan Enterprise & Standard</li>
+                        <li>Nessus Professional & Tenable.io</li>
+                        <li>Relatórios executivos + priorização de risco</li>
+                        <li>Integração CI/CD opcional</li>
+                    </ul>
+                </div>
+
+                <!-- NOVO SERVIÇO 6 - Credenciais Vazadas & Dark Web -->
+                <div class="service-card">
+                    <div class="service-icon">
+                        <img src="./assets/images/service-darkweb.jpg" alt="Monitoramento de Credenciais Vazadas" loading="lazy">
+                    </div>
+                    <h3 class="service-title">Monitoramento de Credenciais & Dark Web</h3>
+                    <p class="service-description">Identificação proativa de dados corporativos expostos na internet e deep/dark web.</p>
+                    <ul class="service-list">
+                        <li>Busca em +300 bancos de dados de vazamentos</li>
+                        <li>HaveIBeenPwned, DeHashed, Leak-Lookup, IntelX</li>
+                        <li>Alertas em tempo real de novos leaks</li>
+                        <li>Relatório executivo com recomendações</li>
+                        <li>Suporte a rotação de credenciais críticas</li>
                     </ul>
                 </div>
             </div>
@@ -295,7 +327,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; <span id="y">2025</span> Lyvio Security — Segurança Ofensiva</p>
+            <p>© <span id="y">2025</span> Lyvio Security — Segurança Ofensiva</p>
         </div>
     </footer>
 
